--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <meta name="description" content="Reviews and trailers of your favorite movies and tv shows.">
+    <meta name="keywords" content="movie, tv, show, tvs, shows, movies, trailers, trailer, reviews, review, videos, video, favorite, favorites, favourites, favourite, tvshow">
+    <meta name="og:title" content="Movie Reviews">
+    <meta name="og:url" content="https://movieapp-react-sanodzegg.netlify.app/">
+    <meta name="og:image" content="https://i.ibb.co/4MTNT0M/thumb.png">
+    <meta name="twitter:title" content="Movie Reviews">
+    <meta name="twitter:description" content="Trailers and reviews of different movies and tv shows.">
+    <meta name="twitter:image" content="https://i.ibb.co/4MTNT0M/thumb.png">
+    <title>Movie Reviews</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
